--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
 
 <body>
 
+ <div id="blockAutocomplete">
+    <div id="title">Autocomplete</div>
+
+    <div id="blockInput"> 
+        <label class="label" id="label">New car...</label>
+        <!-- <span id="listAdd1" class="listAdd">Audi</span> -->
+        <div id="elementSearch">
+          <!-- <div class="elementSearch">dfdf</div>
+          <div class="elementSearch">sdfsdf</div> -->
+        </div>
+        <input id="input" type="text">
+        
+    </div>
+    
+    <div id="blockList" class="hidden">
+        <ul id="ul">
+            <li><img src="img/audi.png" width="30" alt=""> Audi</li>
+            <li> <img src="img/bmw.png" width="30" alt=""> BMW</li>
+            <li><img src="img/caterpillar.png" width="30" alt=""> Caterpillar</li>
+            <li><img src="img/fiat.png" width="30" alt=""> Fiat</li>
+            <li><img src="img/ford.png" width="30" alt=""> Ford</li>
+            <li><img src="img/geely.png" width="30" alt=""> Geely</li>
+            <li><img src="img/honda.png" width="30" alt="">Honda</li>
+            <li><img src="img/lada.png" width="30" alt=""> Lada</li>
+          </ul>
+    </div>
+  </div>
  
  
  </body>
