--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <!-- <div class="elementSearch">dfdf</div>
           <div class="elementSearch">sdfsdf</div> -->
         </div>
-        <input id="input" type="text">
+        <input id="input" type="text" autocomplete="off">
         
     </div>
     
